# pup-agent

./: .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  pyproject.toml
.github/: ISSUE_TEMPLATE.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml
docs/: architecture.md
examples/: sample-prompts.md
src/pup_agent/: __init__.py  agent.py  cli.py  config.py  models.py  tools.py
src/pup_agent/providers/: __init__.py  base.py  mock_provider.py  openai_provider.py
tests/: test_agent.py
