[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pup-agent"
version = "0.1.0"
description = "Pup Agent: a lightweight CLI AI agent with tool-use and provider switching"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "Pup Agent Contributors" }
]
urls = { Homepage = "https://github.com/Yakiro190/pup-agent", Repository = "https://github.com/Yakiro190/pup-agent", Issues = "https://github.com/Yakiro190/pup-agent/issues" }
keywords = ["ai", "agent", "cli", "automation", "openai"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Software Development :: Libraries",
]
dependencies = [
  "typer>=0.12.3",
  "rich>=13.7.1"
]

[project.optional-dependencies]
openai = [
  "openai>=1.52.0"
]
dev = [
  "pytest>=8.2.0",
  "pytest-cov>=5.0.0",
  "ruff>=0.11.0"
]

[project.scripts]
pup-agent = "pup_agent.cli:app"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
